# chaos-common-actuators

./: .cproject  CMakeLists.txt
core/: AbstractActuator.cpp  AbstractActuator.h  AbstractSlit.h  Slit.h
models/: CMakeLists.txt
models/technosoft/: ActuatorTechnoSoft.cpp  ActuatorTechnoSoft.h  ActuatorTechnosoft.h  CMakeLists.txt  Slit.h  TechnoSoftLowDriver.cpp  TechnoSoftLowDriver.h  main.cpp  test_technosoft_slit  tmlcomm.h
models/technosoft/ClassesScraper1_0/: TechnoSoftLowDriver.h  main.cpp
models/technosoft/test/: Copia_dichiarazioni_classi_Scrapers_FGalletti.rtf  Ex04_MainFile.c  Ex04_MainFile.h  Makefile  main.cpp  test2_main.cpp  test_slit.cpp
models/technosoftSimulator/: ActuatorTechnoSoft.cpp  ActuatorTechnoSoft.h  CMakeLists.txt  TML_lib.h  TechnoSoftLowDriver.cpp  TechnoSoftLowDriver.h  tmlcomm.h
models/technosoftSimulator/test/: ActuatorTechnoSoftSim.cpp  ActuatorTechnoSoftSim.h  TechnoSoftLowDriverSim.cpp  TechnoSoftLowDriverSim.h  test_slit.cpp
nbproject/: configurations.xml  project.xml
scrapers/: README
