
cmake_minimum_required(VERSION 2.8)
project(actuators_models)
  add_subdirectory(technosoftSimulator)
IF("${CMAKE_C_COMPILER}" MATCHES "i686-nptl-linux-gnu-gcc") 
  IF( NOT CHAOS_STATIC)
    MESSAGE(STATUS "Enabling compilation of technosoft")
    FILE(REMOVE technosoft/UnitServerIgnore)
    add_subdirectory(technosoft)
  ELSE()
    MESSAGE(STATUS "Disabling compilation of technosoft, because static")
  ENDIF()
ELSE()
  MESSAGE(STATUS "Disabling compilation of technosoft, no right cross compiler")
ENDIF()
  FILE(WRITE technosoft/UnitServerIgnore "disabled ${PROJECT_NAME}")
SET(DRIVERS_LIB ${DRIVERS_LIB} PARENT_SCOPE)
